# rss-cli

./: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-data-on-request-not-a-subscription-manager.md  0003-deterministic-content-hash-item-ids.md  0004-file-based-atomic-cache.md  0005-conditional-get-always-revalidate-default.md  0006-ai-facing-output-contract.md  0007-no-builtin-llm-summarization.md  0008-async-runtime-and-mcp-in-v1.md  0009-html-to-markdown-htmd-html2text.md  0010-release-profile-tuning.md  0011-bounded-mcp-responses.md  0012-deterministic-ordering-and-output-enrichments.md  0013-structured-mcp-tool-results.md  0014-get-item-cache-first-multi-key-lookup.md  0015-bounded-retry-on-transient-429-403.md  0016-per-host-request-gate.md  README.md
docs/plans/: 2026-06-03-mcp-get-item-robustness.md
src/: cache.rs  cli.rs  config.rs  content.rs  core.rs  discover.rs  error.rs  fetch.rs  identity.rs  lib.rs  main.rs  mcp.rs  model.rs  output.rs  parse.rs  ratelimit.rs
tests/: fetch.rs  get_item_window_roll.rs  schema.rs  usage.rs
tests/common/: mod.rs
tests/fixtures/: atom.xml  jsonfeed.json  malformed.xml  rss2.xml
