[package]
name = "rss-cli"
version = "0.1.0"
edition = "2024"
description = "An AI-friendly RSS/Atom feed CLI"

[[bin]]
name = "rss"
path = "src/main.rs"

[lib]
name = "rss_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
directories = "6.0.0"
feed-rs = "2.3.1"
futures = "0.3.32"
html2text = "0.17.1"
opml = "1.1.6"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "charset", "http2"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tl = "0.7.8"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
mockito = "1.7.2"
predicates = "3.1.4"
